# ns-burn

./: .gitignore  AUTOMATED_DEPLOYMENT.md  Anchor.toml  DEPLOYMENT.md  GITHUB_ACTIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SECRETS_TEMPLATE.md  deploy.sh  docker-compose.yml  github-deploy-script.sh  package.json  tsconfig.json
.github/workflows/: README.md  deploy.yml
app/: .dockerignore  Dockerfile  next.config.js  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/app/admin/: page.tsx
app/app/claim/: page.tsx
app/app/leaderboard/: page.tsx
app/app/trainer/: page.tsx
app/components/: LeaderboardTable.tsx  Navigation.tsx  QrDisplay.tsx  QrScanner.tsx  WalletButton.tsx  WalletGate.tsx
app/lib/: anchorClient.ts  hash.ts  idl.json  pdas.ts  time.ts
app/public/metadata/: example.json
programs/workout_poap/: Cargo.toml
programs/workout_poap/src/: errors.rs  events.rs  lib.rs
programs/workout_poap/src/instructions/: add_admin.rs  claim_nft.rs  close_workout_instance.rs  initialize_config.rs  mod.rs  open_workout_instance.rs  register_trainer.rs  remove_admin.rs  set_schedule.rs
programs/workout_poap/src/state/: admin.rs  attendance.rs  config.rs  mod.rs  monthly_counter.rs  schedule.rs  trainer.rs  workout_instance.rs
scripts/: .secrets.env.example  QUICK_START.md  README.md  add-admin.ts  initialize.ts  package.json  setup-github-secrets-from-env.sh  setup-github-secrets.sh  simple-admin.js  tsconfig.json
tests/: workout_poap.spec.ts
